2010-04-20  Andrés G. Aragoneses  <andres@lindenlab.com>

	* README: Replace --with-profile2 with --with-profile4.

2010-04-20  Jonathan Pryor  <jpryor@novell.com>

	* configure.in: On OpenBSD, remove duplicate -pthread options in 
	  libmono_ldflags.  Change from Robert Nagy <robert@openbsd.org>.

2010-04-20  Jonathan Pryor  <jpryor@novell.com>

	* configure.in: For Linux hosts, remove libmono_ldflags="-lpthread".
	  It's unnecessary (for !target_win32, pthreads are checked again 
	  later in configure.in), and it breaks Android (which doesn't have
	  libpthread, but DOES have pthreads in libc).

2010-04-19  Jonathan Pryor  <jpryor@novell.com>

	* configure.in: Disable AC_CHECK_LIB() for pthread, as this breaks
	  autoconf on BSD platforms.  (Why?  Who knows -- it's AutoConf!)

2010-04-19  Jonathan Pryor  <jpryor@novell.com>

	* configure.in: Use AC_CHECK_LIB() to check for pthread instead of
	  just blindly linking to -lpthread, as Android includes pthread
	  support within libc and doesn't provide a separate libpthread.
	  Android's <string.h> pulls in <malloc.h> (unlike glibc), resulting
	  in a build error in mono/utils/mono-codeman.c due to 
	  `struct mallinfo` re-declaration.  Define HAVE_USR_INCLUDE_MALLOC_H 
	  if /usr/include/malloc.h is present to avoid this.

2010-04-19  Jonathan Pryor  <jpryor@novell.com>

	* configure.in: Add header, structure member, and function checks as 
	  Android doesn't provide all the headers, structure members, and 
	  functions that a "full" Linux distro includes.

2010-04-19  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Add a --enable-minimal=normalization option to disable support
	for string normalization.

2010-04-16  Marek Habersack  <mhabersack@novell.com>

	* configure.in: added a check for sysconf(3)

2010-04-14  Miguel de Icaza  <miguel@novell.com>

	* configure.in: turn the AC_MSG_ERROR into a AC_MSG_WARN since in
	Andrew's configuration this aborts the build:
