@@ -25,21 +25,16 @@
 /* Android does not implement pthread_mutex_timedlock(), but does provide an
  * unusual declaration: http://code.google.com/p/android/issues/detail?id=7807
  */
-#if defined(PLATFORM_ANDROID)
-int pthread_mutex_timedlock (pthread_mutex_t *mutex,
-			    struct timespec *timeout);
+#ifdef PLATFORM_ANDROID
+#define CONST_NEEDED
 #else
-int pthread_mutex_timedlock (pthread_mutex_t *mutex,
-			    const struct timespec *timeout);
+#define CONST_NEEDED const
 #endif
 
-#if defined(PLATFORM_ANDROID)
+int pthread_mutex_timedlock (pthread_mutex_t *mutex,
+			    CONST_NEEDED struct timespec *timeout);
 int
-pthread_mutex_timedlock (pthread_mutex_t *mutex, struct timespec *timeout)
-#else
-int
-pthread_mutex_timedlock (pthread_mutex_t *mutex, const struct timespec *timeout)
-#endif
+pthread_mutex_timedlock (pthread_mutex_t *mutex, CONST_NEEDED struct timespec *timeout)
 {
 	struct timeval timenow;
 	struct timespec sleepytime;
